<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SkipjackQueCreateActivity">


    <TextView
        android:id="@+id/text_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="serif"
        android:hint="#RESULT"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_run" />

    <TextView
        android:id="@+id/view_run"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/Light_Green"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/run"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/chk_merge_batch_species"
        app:layout_constraintStart_toStartOf="@+id/chk_merge_batch_species"
        app:layout_constraintTop_toBottomOf="@+id/chk_merge_batch_species" />

    <TextView
        android:id="@+id/capt_productType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/capt_product_type"
        app:layout_constraintStart_toStartOf="@+id/text_customer"
        app:layout_constraintTop_toBottomOf="@+id/text_customer" />

    <TextView
        android:id="@+id/capt_productRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/capt_range"
        app:layout_constraintStart_toStartOf="@+id/text_queueRange"
        app:layout_constraintTop_toBottomOf="@+id/text_customer" />

    <TextView
        android:id="@+id/text_queueType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Cyan_A200"
        android:fontFamily="@font/roboto_mono"
        android:hint="@string/hint_type"
        android:minHeight="48dp"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/text_customer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_customer"
        app:layout_constraintTop_toBottomOf="@+id/capt_productType" />

    <TextView
        android:id="@+id/text_queueRange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Cyan_A200"
        android:fontFamily="@font/roboto_mono"
        android:hint="@string/hint_range"
        android:minHeight="48dp"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/input_group"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/input_group"
        app:layout_constraintTop_toBottomOf="@+id/capt_productType" />

    <TextView
        android:id="@+id/text_customer"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/Amber_A200"
        android:ems="10"
        android:fontFamily="@font/roboto_mono"
        android:hint="@string/hint_cust"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/labelBatchNo"
        app:layout_constraintTop_toBottomOf="@+id/labelBatchNo"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/labelBatchNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/capt_customer"
        app:layout_constraintStart_toStartOf="@+id/capt_barcode"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view" />

    <TextView
        android:id="@+id/labelBatchNo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/capt_group"
        app:layout_constraintStart_toStartOf="@+id/input_group"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view" />

    <EditText
        android:id="@+id/input_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/Amber_A200"
        android:ems="10"
        android:fontFamily="@font/roboto_mono"
        android:hint="@string/hint_group"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/input_barcode"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/text_customer"
        tools:ignore="TouchTargetSizeCheck" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/Blue_Gray_050"
        app:layout_constraintEnd_toEndOf="@+id/input_barcode"
        app:layout_constraintHeight="wrap_content_constrained"
        app:layout_constraintHeight_max="150dp"
        app:layout_constraintHeight_min="150dp"
        app:layout_constraintStart_toStartOf="@+id/capt_barcode"
        app:layout_constraintTop_toBottomOf="@id/input_barcode"
        app:layout_constraintWidth="match_constraint" />

    <TextView
        android:id="@+id/capt_barcode"
        android:layout_width="90dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:fontFamily="serif"
        android:gravity="center_vertical|end"
        android:text="SCAN/KEY :"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/input_barcode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_barcode" />

    <EditText
        android:id="@+id/input_barcode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@color/Cyan_A200"
        android:ems="10"
        android:fontFamily="@font/roboto_mono"
        android:hint="@string/hint_barcode"
        android:inputType="text"
        android:minHeight="40dp"
        android:paddingLeft="8dp"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/capt_barcode"
        app:layout_constraintTop_toBottomOf="@+id/view_shift" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/capt_queue_create"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_shift"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Cyan_050"
        android:ems="10"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="dd.MM.yyyy - DN"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@color/Red_A700"
        android:fontFamily="serif"
        android:hint="#USER"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColor="@color/White"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/view_shift"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:hint="/"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_customer"
        app:layout_constraintStart_toEndOf="@+id/text_customer"
        app:layout_constraintTop_toTopOf="@+id/text_customer" />

    <CheckBox
        android:id="@+id/chk_merge_batch_species"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:fontFamily="serif"
        android:text="@string/capt_merge_batch_species"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/text_queueRange"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/text_customer"
        app:layout_constraintTop_toBottomOf="@+id/text_queueType" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>